# axum_api_rust_tests

./: Cargo.toml  README.md
src/: main.rs  routes.rs
src/test/: integration.rs  unit.rs
