[package]
name = "axum_tdd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.16", features = ["headers"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "^1.25.0", features = ["full"] }
hyper = "0.14.24"
tower = "0.4.13"
sqlx = { version = "0.6", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "json",
] }
